unpackaged/main/default/objects/Quote/fields/Duree_de_traitement_Lecapitaine__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_traitement_Lecapitaine__c</fullName>
    <formula>IF(

AND(NOT(ISBLANK(EnAttenteDDT2_Stamp__c )),NOT(ISBLANK( EnAttenteLeCapitaine_Stamp__c)),NOT(ISBLANK(EnAttenteLecapitaineRetourAchat_Stamp__c)),NOT(ISBLANK(EnAttenteLecapitaineServiceAchat_Stamp__c )))
,
( (EnAttenteDDT2_Stamp__c - EnAttenteLeCapitaine_Stamp__c)-(EnAttenteLecapitaineRetourAchat_Stamp__c -  EnAttenteLecapitaineServiceAchat_Stamp__c ) )*24
,
if(
AND((ISBLANK(EnAttenteLecapitaineRetourAchat_Stamp__c)),(ISBLANK(EnAttenteLecapitaineServiceAchat_Stamp__c )))
,
(EnAttenteDDT2_Stamp__c - EnAttenteLeCapitaine_Stamp__c)*24
,
null
))</formula>
    <label>Durée de traitement Lecapitaine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>