unpackaged/main/default/objects/Quote/fields/Duree_de_traitement_Tarification__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_traitement_Tarification__c</fullName>
    <formula>if(NOT(ISBLANK(EnAttenteLecapitaineEntarification_Stamp__c )),
((EnAttenteLecapitaineEntarification_Stamp__c-EnAttenteDDT_Stamp__c)+(DevisTarife_Stamp__c-EnAttenteDDT2_Stamp__c))*24 ,
(( EnAttenteServiceProduit_Stamp__c-EnAttenteDDT_Stamp__c)+(DevisTarife_Stamp__c-EnAttenteDDT2_Stamp__c))*24)</formula>
    <label>Durée de traitement Tarification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>