unpackaged/main/default/objects/Quote/fields/Duree_etude_Achats__c.field-meta.xml
<CustomField>
    <fullName>Duree_etude_Achats__c</fullName>
    <formula>if
(
OR(NOT(ISBLANK(EnAttenteLecapitaineRetourAchat_Stamp__c )),NOT(ISBLANK( EnAttenteLecapitaineServiceAchat_Stamp__c )))
,
(EnAttenteLecapitaineRetourAchat_Stamp__c - EnAttenteLecapitaineServiceAchat_Stamp__c)*24
,
if(
OR(NOT(ISBLANK( EnAttenteServiceProduitRetourAchat_Stamp__c )),NOT(ISBLANK(  EnAttenteServiceProduitAchat_Stamp__c )))
,
(EnAttenteServiceProduitRetourAchat_Stamp__c - EnAttenteServiceProduitAchat_Stamp__c)*24
,NULL)

)</formula>
    <label>Durée d’étude Achats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>