unpackaged/main/default/objects/Quote/fields/Duree_Etude_Service_Produit__c.field-meta.xml
<CustomField>
    <fullName>Duree_Etude_Service_Produit__c</fullName>
    <formula>IF(

AND(NOT(ISBLANK(EnAttenteDDT2_Stamp__c )),NOT(ISBLANK( EnAttenteServiceProduit_Stamp__c )),NOT(ISBLANK(EnAttenteServiceProduitAchat_Stamp__c)),NOT(ISBLANK(EnAttenteServiceProduitRetourAchat_Stamp__c  )))
,
( (EnAttenteDDT2_Stamp__c - EnAttenteServiceProduit_Stamp__c)-(EnAttenteServiceProduitRetourAchat_Stamp__c - EnAttenteServiceProduitAchat_Stamp__c) )*24
,
if(
AND((ISBLANK(EnAttenteLecapitaineRetourAchat_Stamp__c)),(ISBLANK(EnAttenteLecapitaineServiceAchat_Stamp__c )))
,
(EnAttenteDDT2_Stamp__c - EnAttenteServiceProduit_Stamp__c)*24
,
null
))</formula>
    <label>Durée d’étude Service Produit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>