unpackaged/main/default/objects/Quote/fields/Empattement__c.field-meta.xml
<CustomField>
    <fullName>Empattement__c</fullName>
    <label>Empattement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>