unpackaged/main/default/objects/Quote/fields/EnAttenteDDT2_Stamp__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteDDT2_Stamp__c</fullName>
    <label>EnAttenteDDT 2_Stamp</label>
    <type>DateTime</type>
</CustomField>