unpackaged/main/default/objects/Quote/fields/EnAttenteDDT_Stamp__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteDDT_Stamp__c</fullName>
    <label>EnAttenteDDT_Stamp</label>
    <type>DateTime</type>
</CustomField>