unpackaged/main/default/objects/Quote/fields/EnAttenteLeCapitaine_Stamp__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteLeCapitaine_Stamp__c</fullName>
    <label>EnAttenteLeCapitaine_Stamp</label>
    <type>DateTime</type>
</CustomField>