unpackaged/main/default/objects/Quote/fields/EnAttenteLecapitaineAdessiner_Stamp__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteLecapitaineAdessiner_Stamp__c</fullName>
    <label>EnAttenteLecapitaineAdessiner_Stamp</label>
    <type>DateTime</type>
</CustomField>