unpackaged/main/default/objects/Quote/fields/EnAttenteLecapitaineDessin_stamp__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteLecapitaineDessin_stamp__c</fullName>
    <label>EnAttenteLecapitaineDessiné_stamp</label>
    <type>DateTime</type>
</CustomField>