unpackaged/main/default/objects/Quote/fields/EnAttenteLecapitaineEntarification_Stamp__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteLecapitaineEntarification_Stamp__c</fullName>
    <label>EnAttenteLecapitaineEntarification_Stamp</label>
    <type>DateTime</type>
</CustomField>