unpackaged/main/default/objects/Quote/fields/EnAttenteLecapitaineRetourAchat_Stamp__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteLecapitaineRetourAchat_Stamp__c</fullName>
    <label>EnAttenteLecapitaineRetourAchat_Stamp</label>
    <type>DateTime</type>
</CustomField>