unpackaged/main/default/objects/Quote/fields/EnAttenteLecapitaineServiceAchat_Stamp__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteLecapitaineServiceAchat_Stamp__c</fullName>
    <label>EnAttenteLecapitaine&amp;ServiceAchat_Stamp</label>
    <type>DateTime</type>
</CustomField>