unpackaged/main/default/objects/Quote/fields/EnAttenteServiceProduit_EnEtudeProduit__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteServiceProduit_EnEtudeProduit__c</fullName>
    <label>EnAttenteServiceProduit_EnEtudeProduit</label>
    <type>DateTime</type>
</CustomField>