unpackaged/main/default/objects/Quote/fields/EnAttenteServiceProduit_EnEvaluation__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteServiceProduit_EnEvaluation__c</fullName>
    <label>EnAttenteServiceProduit_EnEvaluation</label>
    <type>DateTime</type>
</CustomField>