unpackaged/main/default/objects/Quote/fields/EnAttenteServiceProduit_Stamp__c.field-meta.xml
<CustomField>
    <fullName>EnAttenteServiceProduit_Stamp__c</fullName>
    <label>EnAttenteServiceProduit_Stamp</label>
    <type>DateTime</type>
</CustomField>