unpackaged/main/default/objects/Quote/fields/Energie__c.field-meta.xml
<CustomField>
    <fullName>Energie__c</fullName>
    <label>Energie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B100</fullName>
            </value>
            <value>
                <fullName>DIESEL</fullName>
            </value>
            <value>
                <fullName>ELECTRIQUE</fullName>
            </value>
            <value>
                <fullName>ESSENCE</fullName>
            </value>
            <value>
                <fullName>GNC</fullName>
            </value>
            <value>
                <fullName>GNL</fullName>
            </value>
            <value>
                <fullName>GNV</fullName>
            </value>
            <value>
                <fullName>HYBRIDE</fullName>
            </value>
            <value>
                <fullName>AUTRE -  voir Equipements chassis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>