unpackaged/main/default/objects/Quote/fields/Enregistreur_T__c.field-meta.xml
<CustomField>
    <fullName>Enregistreur_T__c</fullName>
    <label>Enregistreur T°</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A DISQUE</fullName>
            </value>
            <value>
                <fullName>DATACOLD 100  - Clé USB</fullName>
            </value>
            <value>
                <fullName>DATACOLD 300 R - avec imprimante</fullName>
            </value>
            <value>
                <fullName>DATACOLD 600 R - avec imprimante</fullName>
            </value>
            <value>
                <fullName>DATACOLD 600 T - avec imprimante</fullName>
            </value>
            <value>
                <fullName>GEOLOCALISATION AVEC REMONTEE DE T°</fullName>
            </value>
            <value>
                <fullName>TOUCHPRINT PREMIUM - avec imprimante</fullName>
            </value>
            <value>
                <fullName>TOUCHPRINT standard  - avec imprimante</fullName>
            </value>
            <value>
                <fullName>TRANSCAN ADVANCE</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir aménagements GROUPE</fullName>
            </value>
            <value>
                <fullName>SANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>