unpackaged/main/default/objects/Quote/fields/Etageres__c.field-meta.xml
<CustomField>
    <fullName>Etageres__c</fullName>
    <label>Etagère (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIXE</fullName>
            </value>
            <value>
                <fullName>RELEVABLE</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE 400 mm 2 FACES D + G</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE 400 mm 3 FACES</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE 400 mm CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE 400 mm CÔTÉ G</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE 400 mm FACE AV</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE 500 mm 2 FACES D + G</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE 500 mm 3 FACES</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE 500 mm CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE 500 mm CÔTÉ G</fullName>
            </value>
            <value>
                <fullName>ETAGERE RELEVABLE 500 mm FACE AV</fullName>
            </value>
            <value>
                <fullName>PLANCHER INTERMEDIAIRE COMPLET AMOVIBLE</fullName>
            </value>
            <value>
                <fullName>1/2 PLANCHER INTERMEDIAIRE AMOVIBLE</fullName>
            </value>
            <value>
                <fullName>DOUBLE PLANCHER AMOVIBLE (CARGO)</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir aménagements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>