unpackaged/main/default/objects/Quote/fields/Etrier_laterale__c.field-meta.xml
<CustomField>
    <fullName>Etrier_laterale__c</fullName>
    <label>Accès latéral (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIXE</fullName>
            </value>
            <value>
                <fullName>2 MARCHEPIEDS ESCAMOTABLES (EMP) - (Brasseur)</fullName>
            </value>
            <value>
                <fullName>2 MARCHEPIEDS ESCAMOTABLES (PAF AR) - (Brasseur)</fullName>
            </value>
            <value>
                <fullName>4 MARCHEPIEDS ESCAMOTABLES (EMP + PAF AR) - (Brasseur)</fullName>
            </value>
            <value>
                <fullName>ÉTRIER 2 MARCHES TÉLESCOPIQUE AVEC BUZZER</fullName>
            </value>
            <value>
                <fullName>ETRIER 3 MARCHES TELESCOPIQUE AVEC BUZZER</fullName>
            </value>
            <value>
                <fullName>ETRIER FIXE</fullName>
            </value>
            <value>
                <fullName>ETRIER TELESCOPIQUE 2 MARCHES AVEC BUZZER</fullName>
            </value>
            <value>
                <fullName>ETRIER TELESCOPIQUE 3 MARCHES AVEC BUZZER</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir aménagements</fullName>
            </value>
            <value>
                <fullName>SANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>