unpackaged/main/default/objects/Quote/fields/Grade_SFAC__c.field-meta.xml
<CustomField>
    <fullName>Grade_SFAC__c</fullName>
    <formula>Opportunity.Account.CotationPF__c</formula>
    <label>Grade SFAC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>