unpackaged/main/default/objects/Quote/fields/Hauteur_Interieur__c.field-meta.xml
<CustomField>
    <fullName>Hauteur_Interieur__c</fullName>
    <label>Hauteur Intérieur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>