unpackaged/main/default/objects/Quote/fields/Hauteur_Interieur_demande__c.field-meta.xml
<CustomField>
    <fullName>Hauteur_Interieur_demande__c</fullName>
    <label>Hauteur Intérieur demandée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>