unpackaged/main/default/objects/Quote/fields/Hauteur_maxi_Hors_tout_demande__c.field-meta.xml
<CustomField>
    <fullName>Hauteur_maxi_Hors_tout_demande__c</fullName>
    <label>Hauteur maxi Hors tout demandée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>