unpackaged/main/default/objects/Quote/fields/Hauteur_passage_arriere_mm__c.field-meta.xml
<CustomField>
    <fullName>Hauteur_passage_arriere_mm__c</fullName>
    <label>Hauteur passage arrière</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>