unpackaged/main/default/objects/Quote/fields/Hauteur_sol_plancher_demande__c.field-meta.xml
<CustomField>
    <fullName>Hauteur_sol_plancher_demande__c</fullName>
    <label>Hauteur sol plancher demandée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>