unpackaged/main/default/objects/Quote/fields/Hauteur_sous_vaporateur_mm__c.field-meta.xml
<CustomField>
    <fullName>Hauteur_sous_vaporateur_mm__c</fullName>
    <label>Hauteur sous évaporateur (mm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>