unpackaged/main/default/objects/Quote/fields/Kilom_trage__c.field-meta.xml
<CustomField>
    <fullName>Kilom_trage__c</fullName>
    <label>Kilométrage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>