unpackaged/main/default/objects/Quote/fields/Kilometrage_1__c.field-meta.xml
<CustomField>
    <fullName>Kilometrage_1__c</fullName>
    <label>Kilométrage 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>