unpackaged/main/default/objects/Quote/fields/Kilometrage_2__c.field-meta.xml
<CustomField>
    <fullName>Kilometrage_2__c</fullName>
    <label>Kilométrage 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>