unpackaged/main/default/objects/Quote/fields/Kilometrage_3__c.field-meta.xml
<CustomField>
    <fullName>Kilometrage_3__c</fullName>
    <label>Kilométrage 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>