unpackaged/main/default/objects/Quote/fields/Largeur_ext_hors_retroviseurs_demande__c.field-meta.xml
<CustomField>
    <fullName>Largeur_ext_hors_retroviseurs_demande__c</fullName>
    <label>Largeur ext. hors rétroviseurs demandée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>