unpackaged/main/default/objects/Quote/fields/Largeur_int_utile_sur_plinthe_demande__c.field-meta.xml
<CustomField>
    <fullName>Largeur_int_utile_sur_plinthe_demande__c</fullName>
    <label>Largeur int. utile sur plinthe demandée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>