unpackaged/main/default/objects/Quote/fields/Largeur_Interieur__c.field-meta.xml
<CustomField>
    <fullName>Largeur_Interieur__c</fullName>
    <label>Largeur int. utile sur plinthe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>