unpackaged/main/default/objects/Quote/fields/Lisse_de_protection__c.field-meta.xml
<CustomField>
    <fullName>Lisse_de_protection__c</fullName>
    <label>Lisse de protection sup. (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>LISSE ACIER 2 FACES D + G</fullName>
            </value>
            <value>
                <fullName>LISSE ACIER 3 FACES</fullName>
            </value>
            <value>
                <fullName>LISSE ACIER CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>LISSE ACIER CÔTÉ G</fullName>
            </value>
            <value>
                <fullName>LISSE ACIER FACE AV</fullName>
            </value>
            <value>
                <fullName>LISSE ALUMINIUM 2 FACES D + G</fullName>
            </value>
            <value>
                <fullName>LISSE ALUMINIUM 3 FACES</fullName>
            </value>
            <value>
                <fullName>LISSE ALUMINIUM CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>LISSE ALUMINIUM CÔTÉ G</fullName>
            </value>
            <value>
                <fullName>LISSE ALUMINIUM FACE AV</fullName>
            </value>
            <value>
                <fullName>LISSE INOX 2 FACES D + G</fullName>
            </value>
            <value>
                <fullName>LISSE INOX 3 FACES</fullName>
            </value>
            <value>
                <fullName>LISSE INOX CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>LISSE INOX CÔTÉ G</fullName>
            </value>
            <value>
                <fullName>LISSE INOX FACE AV</fullName>
            </value>
            <value>
                <fullName>LISSE PVC 2 FACES D + G</fullName>
            </value>
            <value>
                <fullName>LISSE PVC 3 FACES</fullName>
            </value>
            <value>
                <fullName>LISSE PVC CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>LISSE PVC CÔTÉ G</fullName>
            </value>
            <value>
                <fullName>LISSE PVC FACE AV</fullName>
            </value>
            <value>
                <fullName>LISSE SOUS RAILS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>