unpackaged/main/default/objects/Quote/fields/Lisse_de_protection_supplementaire__c.field-meta.xml
<CustomField>
    <fullName>Lisse_de_protection_supplementaire__c</fullName>
    <label>Lisse de protection sup. (Qté par face)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>