unpackaged/main/default/objects/Quote/fields/Liu_x_liu_x_Hiu__c.field-meta.xml
<CustomField>
    <fullName>Liu_x_liu_x_Hiu__c</fullName>
    <label>Liu x liu x Hiu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>