unpackaged/main/default/objects/Quote/fields/Lock__c.field-meta.xml
<CustomField>
    <fullName>Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock</label>
    <type>Checkbox</type>
</CustomField>