unpackaged/main/default/objects/Quote/fields/Longueur_ext_hors_tout_demande__c.field-meta.xml
<CustomField>
    <fullName>Longueur_ext_hors_tout_demande__c</fullName>
    <label>Longueur ext. hors tout demandée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>