unpackaged/main/default/objects/Quote/fields/Longueur_int_sur_plinthe_demande__c.field-meta.xml
<CustomField>
    <fullName>Longueur_int_sur_plinthe_demande__c</fullName>
    <label>Longueur int. sur plinthe demandée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>