unpackaged/main/default/objects/Quote/fields/Longueur_Interieur__c.field-meta.xml
<CustomField>
    <fullName>Longueur_Interieur__c</fullName>
    <label>Longueur int. utile sur plinthe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>