unpackaged/main/default/objects/Quote/fields/Longueur_Plateforme__c.field-meta.xml
<CustomField>
    <fullName>Longueur_Plateforme__c</fullName>
    <label>Longueur Plateforme</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>