unpackaged/main/default/objects/Quote/fields/Loyer__c.field-meta.xml
<CustomField>
    <fullName>Loyer__c</fullName>
    <label>Loyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>