unpackaged/main/default/objects/Quote/fields/Loyer_avec_options__c.field-meta.xml
<CustomField>
    <fullName>Loyer_avec_options__c</fullName>
    <description>Loyer + Somme des prix des options retenues</description>
    <formula>Loyer__c +  Somme_des_prix_options__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Loyer + Somme des prix des options retenues</inlineHelpText>
    <label>Loyer avec options</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>