unpackaged/main/default/objects/Quote/fields/Loyer_Depot_Manager__c.field-meta.xml
<CustomField>
    <fullName>Loyer_Depot_Manager__c</fullName>
    <label>Loyer Depot Manager</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>