unpackaged/main/default/objects/Quote/fields/Loyer_Directeur_de_site__c.field-meta.xml
<CustomField>
    <fullName>Loyer_Directeur_de_site__c</fullName>
    <label>Loyer Directeur de site</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>