unpackaged/main/default/objects/Quote/fields/Loyer_DO_DF__c.field-meta.xml
<CustomField>
    <fullName>Loyer_DO_DF__c</fullName>
    <label>Loyer DO/DF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>