unpackaged/main/default/objects/Quote/fields/Marque_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Marque_Catalogue__c</fullName>
    <label>Marque utilisé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>