unpackaged/main/default/objects/Quote/fields/Marque_Modele_Chassis__c.field-meta.xml
<CustomField>
    <fullName>Marque_Modele_Chassis__c</fullName>
    <label>Marque /  Modèle (Châssis)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AUTRE -  voir Equipements chassis</fullName>
            </value>
            <value>
                <fullName>CHEREAU / REMORQUE</fullName>
            </value>
            <value>
                <fullName>CHEREAU / SEMIREMORQUE</fullName>
            </value>
            <value>
                <fullName>CITROEN / BERLINGO</fullName>
            </value>
            <value>
                <fullName>CITROEN / E-JUMPY</fullName>
            </value>
            <value>
                <fullName>CITROEN / JUMPER</fullName>
            </value>
            <value>
                <fullName>CITROEN / JUMPY</fullName>
            </value>
            <value>
                <fullName>DAF / CF</fullName>
            </value>
            <value>
                <fullName>DAF / LF</fullName>
            </value>
            <value>
                <fullName>DAF / XF</fullName>
            </value>
            <value>
                <fullName>FIAT / DOBLO</fullName>
            </value>
            <value>
                <fullName>FIAT / DUCATO</fullName>
            </value>
            <value>
                <fullName>FIAT / FIORINO</fullName>
            </value>
            <value>
                <fullName>FIAT / TALENTO</fullName>
            </value>
            <value>
                <fullName>FORD / TRANSIT</fullName>
            </value>
            <value>
                <fullName>FORD / TRANSIT CONNECT</fullName>
            </value>
            <value>
                <fullName>FORD / TRANSIT CUSTOM</fullName>
            </value>
            <value>
                <fullName>FRAPPA / REMORQUE</fullName>
            </value>
            <value>
                <fullName>FRAPPA / SEMI</fullName>
            </value>
            <value>
                <fullName>FRAPPA / SEMI-REMORQUE</fullName>
            </value>
            <value>
                <fullName>FREEGONES / TRICYCLE</fullName>
            </value>
            <value>
                <fullName>FREIGHTLINER / M2-106</fullName>
            </value>
            <value>
                <fullName>FREIGHTLINER / M2-112</fullName>
            </value>
            <value>
                <fullName>FREIGHTLINER / SPRINTER</fullName>
            </value>
            <value>
                <fullName>FRUEHAUF / REM</fullName>
            </value>
            <value>
                <fullName>FRUEHAUF / REMORQUE</fullName>
            </value>
            <value>
                <fullName>FRUEHAUF / SEMI</fullName>
            </value>
            <value>
                <fullName>FRUEHAUF / SEMI-REMORQUE</fullName>
            </value>
            <value>
                <fullName>FRUEHAUF / TRAILER</fullName>
            </value>
            <value>
                <fullName>FUSO / CANTER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>