unpackaged/main/default/objects/Quote/fields/Marque_Modele_Groupe__c.field-meta.xml
<CustomField>
    <fullName>Marque_Modele_Groupe__c</fullName>
    <label>Marque /  Modèle (Groupe)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CARRIER - NEOS 100</fullName>
            </value>
            <value>
                <fullName>CARRIER - NEOS 100S</fullName>
            </value>
            <value>
                <fullName>CARRIER - PULSOR 350</fullName>
            </value>
            <value>
                <fullName>CARRIER - PULSOR 400</fullName>
            </value>
            <value>
                <fullName>CARRIER - PULSOR 400 MT</fullName>
            </value>
            <value>
                <fullName>CARRIER - PULSOR 500</fullName>
            </value>
            <value>
                <fullName>CARRIER - PULSOR 600 MT</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 1150</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 1150 MT</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 1150 MT Silent</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 1150 Silent</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 1250</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 1250 City</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 1250 MT</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 1250 MT City</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 1250 MT Silent</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 1250 Silent</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 450</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 550</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 750</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 750 MT</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 850</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA 850 MT</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA GAZ 1250 City</fullName>
            </value>
            <value>
                <fullName>CARRIER - SUPRA GAZ 1250 MT City</fullName>
            </value>
            <value>
                <fullName>CARRIER TRS - ICELAND (Sous châssis)</fullName>
            </value>
            <value>
                <fullName>CARRIER TRS - ICELAND TWIN COOL (Sous châssis)</fullName>
            </value>
            <value>
                <fullName>CARRIER TRS - SYBERIA</fullName>
            </value>
            <value>
                <fullName>CARRIER TRS - SYBERIA TWIN COOL</fullName>
            </value>
            <value>
                <fullName>CARRIER - VATNA 204H (Plaques)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>